Refactor MCP descriptor catalog and guidance resource